[package]
name    = "nsave"
version = "0.1.0"
authors = [ "LiChunhui" ]
edition = "2021"

[[bin]]
name = "nsave"
path = "src/main.rs"

[[bin]]
name = "nsave-cli"
path = "src/bin/cli/main.rs"

[lib]
name = "libnsave"
path = "src/lib.rs"

[dependencies]
hashbrown  = "0.14"
pcap       = "2.0.0"
etherparse = "0.13.0"
ctrlc      = "3.4.2"
chrono     = "0.4.35"
serde      = { version = "1.0", features = ["derive"] }
bincode    = "1.3.3"
clap       = "4.5.4"
memmap2    = "0.9.4"
libc       = "0.2"
toml       = "0.8.16"
daemonize  = "0.5"

[dev-dependencies]
tempfile = "3.10.1"